--- a/FrontalLobe.html
+++ b/FrontalLobe.html
@@ -1,8 +1,47 @@
 <html>
-    <head>
-        <title> About the Frontal Lobe </title>
-    </head>
-    <body>
-        <a href="E-Cybermission.html">Go back to Home Page</a>
-    </body>
+
+<head>
+    <style>
+        body {
+            background-color: rgb(231, 146, 107);
+        }
+
+        .center-align {
+            text-align: center;
+        }
+
+        p {
+            font-family: 'Times New Roman', Times, serif;
+            font-size: 2.5em;
+            color: black;
+        }
+    </style>
+
+    <title> About the Frontal Lobe </title>
+</head>
+
+<body>
+    <table>
+        <tr>
+            <td>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+            </td>
+            <td>
+                <div class="center-align">
+                    <a href="index.html"><img src="brain-icon.jpg" height="70px" width="70px" /></a>     
+                    <h1>About the Frontal Lobe</h1>
+                    <p>The Frontal Lobes are located at the front of the brain living up to its name. They are the
+                        largest lobes and are associated with movement, expressing language and complex level functions.
+                        Emotions and behavior is als linked to the Frontal Lobes. According to,” Queensland Health”,
+                        "The frontal lobes are considered our behavior and emotional control center and home to our
+                        personality.” Using electronics continuously affects this part of the brain with changes in your
+                        personality, behavior, and multi-step movements. This can cause you to be more introverted and
+                        hostile with 0 to no motivation in activities you once enjoyed.</p>
+                </div>
+            </td>
+            <td>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+            </td>
+        </tr>
+    </table>
+</body>
+
 </html>
