--- a/OccipitalLobe.html
+++ b/OccipitalLobe.html
@@ -1,8 +1,52 @@
 <html>
-    <head>
-        <title> About the Occipital Lobe </title>
-    </head>
-    <body>
-        <a href="E-Cybermission.html">Go back to Home Page</a>
-    </body>
+
+<head>
+    <style>
+        body {
+            background-color: rgb(90, 32, 156);
+        }
+
+        .center-align {
+            text-align: center;
+        }
+
+        p {
+            font-family: 'Times New Roman', Times, serif;
+            font-size: 2.5em;
+            color: black;
+        }
+    </style>
+
+    <title> About the Occipital Lobe </title>
+</head>
+
+<body>
+    <table>
+        <tr>
+            <td>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+            </td>
+            <td>
+                <div class="center-align">
+                    <a href="index.html"><img src="brain-icon.jpg" height="70px" width="70px" /></a>
+                    <h1>About the Occipital Lobe</h1>
+                    <p>The Occipital Lobe helps you see and process the world and is located at the back
+                        of the brain and above the cerebrum. According to,”Spinalcord.com Team”, <br>“The occipital lobe
+                        is
+                        the seat of most
+                        of the brain's visual cortex, allowing you not only to see and process stimuli from the external
+                        world, but also
+                        to assign meaning to and remember visual perceptions.<br> Located just under the parietal lobe
+                        and
+                        above the
+                        temporal lobe, the occipital lobe is the brain's smallest lobe, but its functions are
+                        indispensable.” <br> The
+                        Occipital Lobe is connected to receiving data from the external and internal world. </p>
+                </div>
+            </td>
+            <td>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+            </td>
+        </tr>
+    </table>
+</body>
+
 </html>
