--- a/Temporal_Lobe.html
+++ b/Temporal_Lobe.html
@@ -1,8 +1,41 @@
 <html>
-    <head>
-        <title> About the Temporal Lobe </title>
-    </head>
-    <body>
-        <a href="E-Cybermission.html">Go back to Home Page</a>
-    </body>
+
+<head>
+    <style>
+        body {
+            background-color: rgb(25, 177, 101);
+        }
+
+        .center-align {
+            text-align: center;
+        }
+
+        p {
+            font-family: 'Times New Roman', Times, serif;
+            font-size: 2.5em;
+            color: black;
+        }
+    </style>
+
+    <title> About the Temporal Lobe </title>
+</head>
+
+<body>
+    <table>
+        <tr>
+            <td>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+            </td>
+            <td>
+                <div class="center-align">
+                    <a href="index.html"><img src="brain-icon.jpg" height="70px" width="70px" /></a>
+                    <h1>About the Temporal Lobe</h1>
+                    <p> </p>
+                </div>
+            </td>
+            <td>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+            </td>
+        </tr>
+    </table>
+</body>
+
 </html>
