--- a/index.html
+++ b/index.html
@@ -3,6 +3,9 @@
 <head>
     <title>How do electronics affect different parts of your brain?</title>
     <style>
+        body {
+            background-color: rgb(99, 165, 252);
+        }
         .center-align {
             text-align: center;
         }
@@ -16,60 +19,81 @@
             letter-spacing: 3px;
         }
 
-        p3 {
+        p {
             font-family: 'Times New Roman', Times, serif;
-            font-size: medium;
-            color: darkmagenta;
+            font-size: 1.2em;
+            color: black;
         }
     </style>
 </head>
 
 <body>
-    <div class="center-align">
-       <h3></h3>What are the different parts of the brain?</h3>
-        <p> What are the different parts of the brain?
-            The different parts of the brain are the Temporal Lobe, Parietal Lobe, Occipital Lobe, Frontal Lobe, and the
-            Brainstem.</p>
-    
-      <p> How are electronincs infused with your daily life?
-            Today, using electronics is a big part Today, using electronics is a big part of our daily lives, some
-            people
-            think they can’t live without them.
-            Although, people love electronics especially ones with screens such as phones, ipads, laptops, and more.
-            All of these devices can affect the brain in a negative way.
-            For example, electronics can
-            physically strain your eyes and body, leading to permanent damage such as blurry vision.</p>
-     <p>What is the Temporal Lobe?
-            -The Temporal Lobe is behind both ears and is the second biggest lobe.
-            -It's purpose is to process auditory information and with the encoding of memory.
-            -Dedicated to processing information in your memory</p>
-     <p>What is the Parietal Lobe?</p>
-     <p> What is the Occipital Lobe?</p>
-     <p> What is the Frontal Lobe?</p>
-     <p> What is the Brainstem?</p>
+    <table>
+        <tr>
+            <td>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</td>
+            <td>
+                <div class="center-align">
+                    <h1>Intro : What is the brain?</h1>
+                    <p> The brain is the most complex organ in your body, and there are tons of sections in the brain
+                        matter assigned
+                        to a specific task. Think of it like making a car, one person works on the physical structure,
+                        another
+                        develops the idea, and the last processes the information. Without one the other won’t be able
+                        to function
+                        on a certain task without each other. There are multiple parts of the brain such as the parietal
+                        lobe,
+                        temporal lobe, occipital lobe, frontal lobe, cerebellum, and brain stem. Each piece corresponds
+                        to another
+                        working together to perform simple tasks and activities in your daily life.
+                    </p>
 
-        <img src="Brain_Parts.png" usemap="#image-map">
-        <map name="image-map">
-            <area target="" alt="Frontal Lobe " title="Frontal Lobe " href="FrontalLobe.html"
-                coords="175,297,133,309,111,304,132,292,125,281,94,286,72,265,55,242,59,207,65,185,85,158,95,131,119,106,145,90,165,72,189,57,219,46,245,39,268,40,285,41,294,53,276,76,268,105,282,130,265,155,264,185,222,214,202,247,176,271"
-                shape="poly">
-            <area target="" alt="Temporal Lobe" title="Temporal Lobe" href="Temporal_Lobe.html"
-                coords="242,215,210,230,203,256,188,267,170,285,178,301,172,319,180,341,201,349,217,352,231,352,240,360,262,361,276,357,283,345,304,340,322,314,340,301,351,291,370,293,396,291,409,283,430,277,440,253,444,235,459,226,459,219,423,216,385,206,368,179,351,175,330,181,301,178,283,184,270,193,272,202,255,201"
-                shape="poly">
-            <area target="" alt="Cerebrum " title="Cerebrum " href="Cerebrum.html"
-                coords="353,295,332,307,348,313,352,328,359,350,371,370,384,391,395,404,414,412,443,408,465,386,478,378,500,373,520,356,530,335,540,294,535,275,504,271,477,278,452,264,442,262,418,282,391,293"
-                shape="poly">
-            <area target="" alt="Brain Stem" title="Brain Stem" href="BrainStem.html"
-                coords="325,316,311,331,318,345,347,370,365,395,393,412,421,441,445,466,465,472,472,458,449,407,432,417,412,414,386,398,381,382,363,364,360,350,347,322,337,317"
-                shape="poly">
-            <area target="" alt="Occipital Lobe" title="Occipital Lobe" href="OccipitalLobe.html"
-                coords="482,202,464,213,459,226,443,234,442,259,470,275,491,273,510,267,527,277,554,265,566,245,571,218,573,181,555,169,544,147,526,128,515,151,512,172,500,190"
-                shape="poly">
-            <area target="" alt="Parietal Lobe" title="Parietal Lobe" href="ParietalLobe.html"
-                coords="283,145,264,157,270,190,300,177,334,175,357,174,377,192,393,209,431,216,462,216,483,201,499,188,512,163,514,140,524,124,500,98,477,88,450,73,428,64,404,57,379,51,350,42,321,36,298,44,295,74,268,95,270,118,286,132"
-                shape="poly">
-        </map>
-    </div>
+                    <h1>How are electronincs infused with your daily life?</h1>
+                    <p>Today, using electronics is a big part of our daily lives, some people think they can’t live
+                        without them.
+                        Although, people love electronics especially ones with screens such as phones, ipads, laptops,
+                        and more.
+                        These days we have electric toothbrushes and glasses with cameras in them changing the way
+                        people perceive
+                        the world drastically. With advanced technology at their hand their brains start to adapt to
+                        relying on
+                        these items to perform everyday tasks. Even though some devices do not emit blue light, a
+                        majority of
+                        electronics people need to rely on for jobs,schools, and personal uses do. These devices can
+                        affect the
+                        brain in a negative way. Electronics are needed to be used to make life easier but, overusing
+                        them can be a
+                        big problem entirely. For example,electronics can physically strain your eyes and body, leading
+                        to permanent
+                        damage such as blurry vision.
+                   <h1>Click On Each Part of the Brain down below to find out more</h1>
+                    </p>
+
+                    <img src="Brain_Parts.png" usemap="#image-map">
+                    <map name="image-map">
+                        <area target="" alt="Frontal Lobe " title="Frontal Lobe " href="FrontalLobe.html"
+                            coords="175,297,133,309,111,304,132,292,125,281,94,286,72,265,55,242,59,207,65,185,85,158,95,131,119,106,145,90,165,72,189,57,219,46,245,39,268,40,285,41,294,53,276,76,268,105,282,130,265,155,264,185,222,214,202,247,176,271"
+                            shape="poly">
+                        <area target="" alt="Temporal Lobe" title="Temporal Lobe" href="Temporal_Lobe.html"
+                            coords="242,215,210,230,203,256,188,267,170,285,178,301,172,319,180,341,201,349,217,352,231,352,240,360,262,361,276,357,283,345,304,340,322,314,340,301,351,291,370,293,396,291,409,283,430,277,440,253,444,235,459,226,459,219,423,216,385,206,368,179,351,175,330,181,301,178,283,184,270,193,272,202,255,201"
+                            shape="poly">
+                        <area target="" alt="Cerebrum " title="Cerebrum " href="Cerebrum.html"
+                            coords="353,295,332,307,348,313,352,328,359,350,371,370,384,391,395,404,414,412,443,408,465,386,478,378,500,373,520,356,530,335,540,294,535,275,504,271,477,278,452,264,442,262,418,282,391,293"
+                            shape="poly">
+                        <area target="" alt="Brain Stem" title="Brain Stem" href="BrainStem.html"
+                            coords="325,316,311,331,318,345,347,370,365,395,393,412,421,441,445,466,465,472,472,458,449,407,432,417,412,414,386,398,381,382,363,364,360,350,347,322,337,317"
+                            shape="poly">
+                        <area target="" alt="Occipital Lobe" title="Occipital Lobe" href="OccipitalLobe.html"
+                            coords="482,202,464,213,459,226,443,234,442,259,470,275,491,273,510,267,527,277,554,265,566,245,571,218,573,181,555,169,544,147,526,128,515,151,512,172,500,190"
+                            shape="poly">
+                        <area target="" alt="Parietal Lobe" title="Parietal Lobe" href="ParietalLobe.html"
+                            coords="283,145,264,157,270,190,300,177,334,175,357,174,377,192,393,209,431,216,462,216,483,201,499,188,512,163,514,140,524,124,500,98,477,88,450,73,428,64,404,57,379,51,350,42,321,36,298,44,295,74,268,95,270,118,286,132"
+                            shape="poly">
+                    </map>
+                </div>
+            </td>
+            <td>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</td>
+        </tr>
+    </table>
 
 </body>
 
