--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
         p {
             font-family: 'Times New Roman', Times, serif;
-            font-size: 1.2em;
+            font-size: 1.5em;
             color: black;
         }
     </style>
@@ -89,6 +89,10 @@
                             coords="283,145,264,157,270,190,300,177,334,175,357,174,377,192,393,209,431,216,462,216,483,201,499,188,512,163,514,140,524,124,500,98,477,88,450,73,428,64,404,57,379,51,350,42,321,36,298,44,295,74,268,95,270,118,286,132"
                             shape="poly">
                     </map>
+               <h1> Brain Quiz: Test What you have learned so far!</h1>
+               <a href="BrainTest.html"><img src="brain-icon.jpg" height="70px" width="80px" /></a>
+              <h1>Click Here! For some fun facts about the brain!</h1>
+               <a href="BrainFacts.html"><img src="brain-icon.jpg" height="70px" width="80px" /></a>
                 </div>
             </td>
             <td>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</td>
