--- a/Cerebrum.html
+++ b/Cerebrum.html
@@ -27,9 +27,17 @@
             </td>
             <td>
                 <div class="center-align">
-                    <a href="index.html"><img src="brain-icon.jpg" height="70px" width="70px" /></a>     
+                    <a href="index.html"><img src="brain-icon.jpg" height="70px" width="70px" /></a>
                     <h1>About the Cerebrum</h1>
-                    <p> </p>
+                    <p>The Cerebellum is located at the back of the brain close to the brainstem. It is responsible for
+                        balance, walking and multi-step motor movements. According to,
+                        “https://www.cancer.gov/publications/dictionaries/cancer-terms/def/cerebellum” , it states, “The
+                        portion of the brain in the back of the head between the cerebrum and the brain stem. The
+                        cerebellum controls balance for walking and standing, and other complex motor functions.” From
+                        my inferences I can tell that if the cerebellum is affected, it would cause the person to
+                        stumble around. But, other than that, electronics apparently do no harm to the cerebellum
+                        whatsoever.
+                    </p>
                 </div>
             </td>
             <td>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
