--- a/ParietalLobe.html
+++ b/ParietalLobe.html
@@ -27,9 +27,17 @@
             </td>
             <td>
                 <div class="center-align">
-                    <a href="index.html"><img src="brain-icon.jpg" height="70px" width="70px" /></a>     
+                    <a href="index.html"><img src="brain-icon.jpg" height="70px" width="70px" /></a>
                     <h1>About the Parietal Lobe</h1>
-                    <p> </p>
+                    <p>The Parietal Lobe distinguishes input and output from your five senses, sight, smell, touch,
+                        taste, and hearing. It is located diagonally towards the Occipital Lobe and right above the
+                        Temporal Lobe. According to, “https://www.spinalcord.com/parietal-lobe” , it states that “The
+                        parietal lobe is located just under the parietal bone of the skull. This important brain lobe
+                        helps integrate sensory input and process language.” The Parietal Lobe works with the Occipital
+                        Lobe over visual control. Like pilots in planes navigating through the skies but in this case it
+                        is the humans surroundings. Your senses are used daily but blue light can affect them by
+                        buffering in tasks that you normally do and coordinates with the other lobes at a very fast
+                        speed. The Parietal Lobe receives data from your surroundings even while you are sleeping. </p>
                 </div>
             </td>
             <td>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
