--- a/Temporal_Lobe.html
+++ b/Temporal_Lobe.html
@@ -29,7 +29,13 @@
                 <div class="center-align">
                     <a href="index.html"><img src="brain-icon.jpg" height="70px" width="70px" /></a>
                     <h1>About the Temporal Lobe</h1>
-                    <p> </p>
+                    <p> The Temporal Lobe sits right behind your ears and is dedicated to processing information. Think
+                        about it Temporal, and temporary kinda similar right? According to “Brain Map: Temporal Lobes |
+                        Queensland Health” ,” The temporal lobes are also believed to play an important role in
+                        processing affect/emotions, language, and certain aspects of visual perception.” Further on, I
+                        read that damage to the Temporal Lobe can be things such as inability to remember faces,
+                        long-term memory, and difficulty understanding spoken words.
+                    </p>
                 </div>
             </td>
             <td>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
