--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
         body {
             background-color: rgb(99, 165, 252);
         }
+
         .center-align {
             text-align: center;
         }
@@ -30,7 +31,8 @@
 <body>
     <table>
         <tr>
-            <td>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</td>
+            <td>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+            </td>
             <td>
                 <div class="center-align">
                     <h1>Intro : What is the brain?</h1>
@@ -55,7 +57,7 @@
                         These days we have electric toothbrushes and glasses with cameras in them changing the way
                         people perceive
                         the world drastically. With advanced technology at their hand their brains start to adapt to
-                        relying on
+                        relying ons
                         these items to perform everyday tasks. Even though some devices do not emit blue light, a
                         majority of
                         electronics people need to rely on for jobs,schools, and personal uses do. These devices can
@@ -64,9 +66,9 @@
                         them can be a
                         big problem entirely. For example,electronics can physically strain your eyes and body, leading
                         to permanent
-                        damage such as blurry vision.
-                   <h1>Click On Each Part of the Brain down below to find out more</h1>
-                    </p>
+                        damage such as blurry vision.</p>
+                    <h1>Click On Each Part of the Brain down below to find out more</h1>
+                    <p>*Cerebrum is meant to be spelled Cerebellum*</p>
 
                     <img src="Brain_Parts.png" usemap="#image-map">
                     <map name="image-map">
@@ -89,13 +91,14 @@
                             coords="283,145,264,157,270,190,300,177,334,175,357,174,377,192,393,209,431,216,462,216,483,201,499,188,512,163,514,140,524,124,500,98,477,88,450,73,428,64,404,57,379,51,350,42,321,36,298,44,295,74,268,95,270,118,286,132"
                             shape="poly">
                     </map>
-               <h1> Brain Quiz: Test What you have learned so far!</h1>
-               <a href="BrainTest.html"><img src="brain-icon.jpg" height="70px" width="80px" /></a>
-              <h1>Click Here! For some fun facts about the brain!</h1>
-               <a href="BrainFacts.html"><img src="brain-icon.jpg" height="70px" width="80px" /></a>
+                    <h1> Brain Quiz: Test What you have learned so far!</h1>
+                    <a href="BrainTest.html"><img src="brain-icon.jpg" height="70px" width="80px" /></a>
+                    <h1>Click Here! For some fun facts about the brain!</h1>
+                    <a href="BrainFacts.html"><img src="brain-icon.jpg" height="70px" width="80px" /></a>
                 </div>
             </td>
-            <td>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</td>
+            <td>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+            </td>
         </tr>
     </table>
 
