--- a/BrainStem.html
+++ b/BrainStem.html
@@ -29,7 +29,17 @@
                 <div class="center-align">
                     <a href="index.html"><img src="brain-icon.jpg" height="70px" width="70px" /></a>
                     <h1>About the Brain Stem</h1>
-                    <p> </p>
+                    <p>The brainstem is located at the bottom of the brain and is connected to your spinal cord at the
+                        top. The brainstem is one of the most vital needs for a human to survive. It is broken down into
+                        3 parts starting from the top, the midbrain, pons, and medulla oblongata. According to,
+                        “https://www.physio-pedia.com/Brainstem” , “It is responsible for many vital functions of life,
+                        such as breathing, consciousness, blood pressure, heart rate, and sleep.” The brain stem also
+                        carries information from your nerves up to the brain through the spinal cord. Blue light may not
+                        affect it, but electronics will .Electronics need to be operated in some way which you may need
+                        to use your hands for. Your hands can bear severe pain after and overuse of clicking buttons
+                        nonstop. The most commonly known one is, arthritis causing severe pain to your nerves linking
+                        with the Parietal Lobe for its senses.
+                    </p>
                 </div>
             </td>
             <td>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
