--- a/BrainFacts.html
+++ b/BrainFacts.html
@@ -3,7 +3,7 @@
 <head>
     <style>
         body {
-            background-color: rgb(192, 175, 164);
+            background-color: rgb(94, 191, 221);
         }
 
         .center-align {
@@ -19,6 +19,7 @@
 
     <title> How many of these facts did you know? </title>
 </head>
+
 <body>
     <table>
         <tr>
@@ -28,7 +29,58 @@
                 <div class="center-align">
                     <a href="index.html"><img src="brain-icon.jpg" height="70px" width="70px" /></a>
                     <h1>Fact #1:</h1>
-                    <p> this is a test</p>
+                    <p> The average adult human brain weighs 3 pounds and has a texture like firm jelly.
+                    </p>
+                    <h1>Fact #2:</h1>
+                    <p> The size of the brain doesn’t matter. No evidence exists that says that a larger brain is
+                        smarter than a smaller brain.
+                    </p>
+                    <h1>Fact #3:</h1>
+                    <p>There are 100,000 miles of blood vessels in the brain. The distance around the world at the
+                        equator is 24,900 miles.
+                    </p>
+                    <h1>Fact #4:</h1>
+                    <p>Every time your heart beats, your arteries carry 20 to 25 percent of your blood to the brain.
+                    </p>
+                    <h1>Fact #5:</h1>
+                    <p>Every time you recall a memory or have a new thought, you create a connection in the brain.
+                    </p>
+                    <h1>Fact #6:</h1>
+                    <p> The harder you think, the more oxygen and fuel your brain will use from your blood – up to 50
+                        percent.
+                    </p>
+                    <h1>Fact #7:</h1>
+                    <p>The human brain is about 75% water.
+                    </p>
+                    <h1>Fact #8:</h1>
+                    <p> More electrical impulses are generated in one day by a single human brain than by all the
+                        telephones in the world.
+                    </p>
+                    <h1>Fact #9:</h1>
+                    <p> Your brain consumes about 25 watts of power while you’re awake – enough energy to illuminate a
+                        lightbulb!
+                    </p>
+                    <h1>Fact #10:</h1>
+                    <p>70,000 is the number of thoughts estimated that the human brain produces on an average day.
+                    </p>
+                    <h1>Fact #11:</h1>
+                    <p>The brain can’t feel any sort of pain. </p>
+                    <h1>Fact #12:</h1>
+                    <p> Cholesterol is key to learning and memory. However, high cholesterol has different effects
+                        depending on your age and other factors.
+                    </p>
+                    <h1>Fact #13:</h1>
+                    <p>Headaches are caused by a chemical reaction in your brain combined with the muscles and nerves of
+                        your neck and head.
+                    </p>
+                    <h1>Fact #14:</h1>
+                    <p>The human brain will grow three times its size in the first year of life. It continues to grow
+                        until you’re about 18 years old.
+                    </p>
+                    <h1>Fact #15:</h1>
+                    <p>The human brain gets smaller as we get older. This usually happens sometime after middle age.
+                    </p>
+
                 </div>
             </td>
             <td>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
