--- a/BrainStem.html
+++ b/BrainStem.html
@@ -35,10 +35,12 @@
                         “https://www.physio-pedia.com/Brainstem” , “It is responsible for many vital functions of life,
                         such as breathing, consciousness, blood pressure, heart rate, and sleep.” The brain stem also
                         carries information from your nerves up to the brain through the spinal cord. Blue light may not
-                        affect it, but electronics will .Electronics need to be operated in some way which you may need
+                        affect it, but electronics will. Electronics need to be operated in some way which you may need
                         to use your hands for. Your hands can bear severe pain after and overuse of clicking buttons
                         nonstop. The most commonly known one is, arthritis causing severe pain to your nerves linking
-                        with the Parietal Lobe for its senses.
+                        with the Parietal Lobe for its senses. Many people do not know this but the brainstem controls
+                        many bodily functions such as breathing, heartbeat and sweating. The brainstem connects the
+                        brain to the rest of the body.
                     </p>
                 </div>
             </td>
