--- a/BrainTest.html
+++ b/BrainTest.html
@@ -3,7 +3,7 @@
 <head>
     <style>
         body {
-            background-color: rgb(123, 128, 125);
+            background-color: rgb(241, 42, 42);
         }
 
         .center-align {
@@ -29,7 +29,35 @@
                 <div class="center-align">
                     <a href="index.html"><img src="brain-icon.jpg" height="70px" width="70px" /></a>
                     <h1>Question 1:</h1>
-                    <p> this is a test</p>
+                    <p>Can each brain part work individually?
+                    </p>
+                    <h1>Question 2:</h1>
+                    <p> What does the brain help you perform on a daily basis?
+                    </p>
+                    <h1>Question 3:</h1>
+                    <p>What are different ways electronics can affect a human physically?
+                    </p>
+                    <h1>Question 4:</h1>
+                    <p>What lobe does the parietal lobe work with to control our vision?
+                    </p>
+                    <h1>Question 5:</h1>
+                    <p>How is the temporal lobe an important role in the brain and our lives?
+                    </p>
+                    <h1>Question 6:</h1>
+                    <p>How does the frontal lobe live up to its name?
+                    </p>
+                    <h1>Question 7:</h1>
+                    <p>What is the smallest lobe in the brain?
+                    </p>
+                    <h1>Question 8:</h1>
+                    <p>What would happen if the cerebellum was affected?
+                    </p>
+                    <h1>Question 9:</h1>
+                    <p> How do electronics affect the brain stem?
+                    </p>
+                    <h1>Question 10:</h1>
+                    <p> What are daily electronics you use? And how do they affect your brain?
+                    </p>
                 </div>
             </td>
             <td>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
