--- a/Cerebrum.html
+++ b/Cerebrum.html
@@ -17,7 +17,7 @@
         }
     </style>
 
-    <title> About the Cerebrum </title>
+    <title> About the Cerebellum </title>
 </head>
 
 <body>
@@ -28,7 +28,7 @@
             <td>
                 <div class="center-align">
                     <a href="index.html"><img src="brain-icon.jpg" height="70px" width="70px" /></a>
-                    <h1>About the Cerebrum</h1>
+                    <h1>About the Cerebellum</h1>
                     <p>The Cerebellum is located at the back of the brain close to the brainstem. It is responsible for
                         balance, walking and multi-step motor movements. According to,
                         “https://www.cancer.gov/publications/dictionaries/cancer-terms/def/cerebellum” , it states, “The
