--- a/ParietalLobe.html
+++ b/ParietalLobe.html
@@ -37,8 +37,7 @@
                         Lobe over visual control. Like pilots in planes navigating through the skies but in this case it
                         is the humans surroundings. Your senses are used daily but blue light can affect them by
                         buffering in tasks that you normally do and coordinates with the other lobes at a very fast
-                        speed. The Parietal Lobe receives data from your surroundings even while you are sleeping. 
-                    </p>
+                        speed. The Parietal Lobe receives data from your surroundings even while you are sleeping. </p>
                 </div>
             </td>
             <td>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
