--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <title>How do electronics affect different parts of your brain?</title>
     <style>
         body {
-            background-color: rgb(99, 165, 252);
+            background-color: rgb(203, 143, 252);
         }
 
         .center-align {
@@ -36,37 +36,26 @@
             <td>
                 <div class="center-align">
                     <h1>Intro : What is the brain?</h1>
-                    <p> The brain is the most complex organ in your body, and there are tons of sections in the brain
-                        matter assigned
-                        to a specific task. Think of it like making a car, one person works on the physical structure,
-                        another
-                        develops the idea, and the last processes the information. Without one the other won’t be able
-                        to function
-                        on a certain task without each other. There are multiple parts of the brain such as the parietal
-                        lobe,
-                        temporal lobe, occipital lobe, frontal lobe, cerebellum, and brain stem. Each piece corresponds
-                        to another
-                        working together to perform simple tasks and activities in your daily life.
-                    </p>
+                    <p> The brain is the most complex organ in your body, and there are countless sections of brain
+                        matter assigned to a specific task. Think of it like making a car, one person works on the
+                        physical structure, another develops the idea, and the last processes the information. Without
+                        one the other won’t be able to function on a certain task without each other. There are multiple
+                        parts of the brain such as the Parietal Lobe, Temporal Lobe, Occipital Lobe, Frontal Lobe,
+                        Cerebellum, and Brain stem. Each piece corresponds to another working together to perform simple
+                        tasks and activities in your daily life. </p>
 
                     <h1>How are electronincs infused with your daily life?</h1>
                     <p>Today, using electronics is a big part of our daily lives, some people think they can’t live
-                        without them.
-                        Although, people love electronics especially ones with screens such as phones, ipads, laptops,
-                        and more.
-                        These days we have electric toothbrushes and glasses with cameras in them changing the way
-                        people perceive
-                        the world drastically. With advanced technology at their hand their brains start to adapt to
-                        relying ons
-                        these items to perform everyday tasks. Even though some devices do not emit blue light, a
-                        majority of
-                        electronics people need to rely on for jobs,schools, and personal uses do. These devices can
-                        affect the
-                        brain in a negative way. Electronics are needed to be used to make life easier but, overusing
-                        them can be a
-                        big problem entirely. For example,electronics can physically strain your eyes and body, leading
-                        to permanent
-                        damage such as blurry vision.</p>
+                        without them. Although, people love electronics especially ones with screens such as phones,
+                        ipads, laptops, and more. These days we have electric toothbrushes and glasses with cameras in
+                        them changing the way people perceive the world drastically. With advanced technology at their
+                        hand their brains start to adapt to relying on these items to perform everyday tasks. Even
+                        though some devices do not emit blue light, a majority of electronics people need to rely on for
+                        jobs,schools, and personal uses do. These devices can affect the brain in a negative way.
+                        Electronics are needed to be used to make life easier but, overusing them can be a big problem
+                        entirely. For example,electronics can physically strain your eyes and body, leading to permanent
+                        damage such as blurry vision.
+                    </p>
                     <h1>Click On Each Part of the Brain down below to find out more</h1>
                     <p>*Cerebrum is meant to be spelled Cerebellum*</p>
 
@@ -93,6 +82,8 @@
                     </map>
                     <h1> Brain Quiz: Test What you have learned so far!</h1>
                     <a href="BrainTest.html"><img src="brain-icon.jpg" height="70px" width="80px" /></a>
+                    <h1>Click Here! For the awnser to the quiz!</h1>
+                    <a href="BrainAwnsers.html"><img src="brain-icon.jpg" height="70px" width="80px" /></a>
                     <h1>Click Here! For some fun facts about the brain!</h1>
                     <a href="BrainFacts.html"><img src="brain-icon.jpg" height="70px" width="80px" /></a>
                 </div>
